<resources>
    <string name="app_name">Droid Cafe</string>
    <string name="action_settings">Settings</string>
    <string name="intro_text">Droid Desserts</string>
    <string name="donut_description">Donuts are glazed and sprinkled with candy.</string>
    <string name="icecream_description">Ice cream sandwiches have chocolate wafers and vanilla filling.</string>
    <string name="froyo_description">FroYo is premium self-serve frozen yogurt.</string>
    <string name="donut_order_message">You ordered a donut.</string>
    <string name="ice_cream_order_message">You ordered an ice cream sandwich.</string>
    <string name="froyo_order_message">You ordered a FroYo.</string>
    <string name="order_textview">Order: </string>
    <string name="name_textview">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="address_textview">Address</string>
    <string name="address_edittext">Enter your address</string>
    <string name="phone_textview">Phone</string>
    <string name="phone_edittext">Enter phone</string>
    <string name="note_textview">Note</string>
    <string name="note_edittext">Enter note</string>
    <string name="delivery_textview">Choose your delivery method:</string>
    <string name="same_day_text">Same day delivery service</string>
    <string name="next_day_text">Next day ground delivery</string>
    <string name="pick_up_text">Pick up</string>
    <string name="action_contact">Contact</string>
    <string name="action_order">Order</string>
    <string name="action_status">Status</string>
    <string-array name="labels_array">
        <item>Home</item>
        <item>Work</item>
        <item>Mobile</item>
        <item>Other</item>
    </string-array>
    <string name="action_order_message">You selected Order.</string>
    <string name="action_status_message">You selected Status.</string>
    <string name="action_favorites_message">You selected Favorites.</string>
    <string name="action_contact_message">You selected Contact.</string>
    <string name="action_favorites">Favorites</string>
</resources>
